[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "100-days-of-ai-safety"
version = "1.0.0"
description = "A comprehensive curriculum for building safe, aligned, and robust AI systems."
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",  # Assuming usage in advanced modules
    "transformers>=4.0.0" # Assuming LLM usage
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "verify_day_*.py"  # Tell pytest to look for our verify scripts
python_functions = "test_*"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py39']
